force-app/main/default/objects/GPMS_Revocation_History__c/GPMS_Revocation_History__c.object-meta.xml
<CustomObject>
    <description>Revocation object</description>
    <label>Revocation History</label>
    <nameField>
        <displayFormat>REV-{0000}</displayFormat>
        <label>Revocation History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revocation History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>