force-app/main/default/objects/GPMS_Revocation_History__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Additional Comments</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>