force-app/main/default/objects/GPMS_Revocation_History__c/fields/Date_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Request__c</fullName>
    <description>Date of Request for Reconsideration</description>
    <label>Date of Request</label>
    <type>Date</type>
</CustomField>