force-app/main/default/objects/GPMS_Revocation_History__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <description>Record Delegate Decision</description>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision to Revoke</fullName>
            </value>
            <value>
                <fullName>Decision not to Revoke</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
            <value>
                <fullName>Intention Withdrawn</fullName>
            </value>
            <value>
                <fullName>Uphold Decision</fullName>
            </value>
            <value>
                <fullName>Set Aside Decision and Substitute New Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>