force-app/main/default/objects/GPMS_Revocation_History__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Date decision made by delegate</description>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>