force-app/main/default/objects/GPMS_Revocation_History__c/fields/Decision_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Due_Date__c</fullName>
    <description>Date Departmental Decision is due</description>
    <label>Decision Due Date</label>
    <type>Date</type>
</CustomField>