force-app/main/default/objects/GPMS_Revocation_History__c/fields/Delegate_Name__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Name__c</fullName>
    <description>Name of delegate making decision</description>
    <label>Delegate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>