force-app/main/default/objects/GPMS_Revocation_History__c/fields/Delegate_Position__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Position__c</fullName>
    <description>Position of delegate making decision</description>
    <label>Delegate Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>All_delegate_positions_in_GPMS</valueSetName>
    </valueSet>
</CustomField>