force-app/main/default/objects/GPMS_Revocation_History__c/fields/Is_Acting__c.field-meta.xml
<CustomField>
    <fullName>Is_Acting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signals if the delegate is acting in their current position</description>
    <label>Check box if Acting</label>
    <type>Checkbox</type>
</CustomField>