force-app/main/default/objects/GPMS_Revocation_History__c/fields/Latest_Submission_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Submission_Received_Date__c</fullName>
    <description>Date most recent submission was received</description>
    <label>Latest Submission Received Date</label>
    <type>Date</type>
</CustomField>