force-app/main/default/objects/GPMS_Revocation_History__c/fields/Link_to_Documents__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Documents__c</fullName>
    <description>User can enter TRIM reference</description>
    <label>Link to Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>