force-app/main/default/objects/GPMS_Revocation_History__c/fields/Notice_of_Decision_Sent__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_Decision_Sent__c</fullName>
    <description>Date decision notice sent to provider</description>
    <label>Notice of Decision Sent</label>
    <type>Date</type>
</CustomField>