force-app/main/default/objects/GPMS_Revocation_History__c/fields/Revocation_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Effective_Date__c</fullName>
    <description>Date places will be revoked</description>
    <label>Revocation Effective Date</label>
    <type>Date</type>
</CustomField>