force-app/main/default/objects/GPMS_Revocation_History__c/fields/Submission_Comments__c.field-meta.xml
<CustomField>
    <fullName>Submission_Comments__c</fullName>
    <description>Comments in relation to Submissions</description>
    <label>Submission Comments</label>
    <type>TextArea</type>
</CustomField>