force-app/main/default/objects/GPMS_Revocation_History__c/fields/Submission_Received_Prior_to_Due_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Received_Prior_to_Due_by_Date__c</fullName>
    <description>Provider has the opportunity to contest a revocation with a submission before the due by date</description>
    <label>Submission Received Prior to Due by Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>