force-app/main/default/objects/GPMS_Revocation_History__c/recordTypes/Cancel_Revoke.recordType-meta.xml
<RecordType>
    <fullName>Cancel_Revoke</fullName>
    <active>true</active>
    <description>Cancel</description>
    <label>Cancel</label>
</RecordType>