force-app/main/default/objects/GPMS_Revocation_History__c/recordTypes/Record_a_Decision_on_Request_for_Reconsideration_Revoke.recordType-meta.xml
<RecordType>
    <fullName>Record_a_Decision_on_Request_for_Reconsideration_Revoke</fullName>
    <active>true</active>
    <description>Record a Decision on Request for Reconsideration</description>
    <label>Record a Decision on Request for Reconsideration</label>
</RecordType>