force-app/main/default/objects/GPMS_Revocation_History__c/recordTypes/Record_AAT_Decision_Revoke.recordType-meta.xml
<RecordType>
    <fullName>Record_AAT_Decision_Revoke</fullName>
    <active>true</active>
    <description>Record AAT Decision</description>
    <label>Record AAT Decision</label>
</RecordType>