force-app/main/default/objects/GPMS_Revocation_History__c/recordTypes/Record_Decision_Revoke.recordType-meta.xml
<RecordType>
    <fullName>Record_Decision_Revoke</fullName>
    <active>true</active>
    <description>Record Decision</description>
    <label>Record Decision</label>
</RecordType>