force-app/main/default/objects/GPMS_Revocation_History__c/recordTypes/Record_Request_for_Reconsideration_by_the_AAT_Revoke.recordType-meta.xml
<RecordType>
    <fullName>Record_Request_for_Reconsideration_by_the_AAT_Revoke</fullName>
    <active>true</active>
    <description>Record Request for Reconsideration by the AAT</description>
    <label>Record Request for Reconsideration by the AAT</label>
</RecordType>