force-app/main/default/objects/GPMS_Revocation_History__c/recordTypes/Record_Request_for_Reconsideration_Revoke.recordType-meta.xml
<RecordType>
    <fullName>Record_Request_for_Reconsideration_Revoke</fullName>
    <active>true</active>
    <description>Record Request for Reconsideration</description>
    <label>Record Request for Reconsideration</label>
</RecordType>