force-app/main/default/objects/GPMS_Revocation_History__c/recordTypes/Withdrawn_Revoke.recordType-meta.xml
<RecordType>
    <fullName>Withdrawn_Revoke</fullName>
    <active>true</active>
    <description>Withdrawn</description>
    <label>Withdrawn</label>
</RecordType>